--- a/app/views/names/index.html.erb
+++ b/app/views/names/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>First name</th>
       <th>Last name</th>
+      <th>Age</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= name.first_name %></td>
         <td><%= name.last_name %></td>
+        <td><%= name.age %></td>
         <td><%= link_to 'Show', name %></td>
         <td><%= link_to 'Edit', edit_name_path(name) %></td>
         <td><%= link_to 'Destroy', name, method: :delete, data: { confirm: 'Are you sure?' } %></td>
