--- a/app/views/names/_form.html.erb
+++ b/app/views/names/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_field :last_name %>
   </div>
 
+<div class="field">
+  <%= f.label :age %>
+  <%= f.text_field :age %>
+</div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
