--- a/app/views/names/show.html.erb
+++ b/app/views/names/show.html.erb
@@ -10,5 +10,10 @@
   <%= @name.last_name %>
 </p>
 
+<p>
+  <strong>Age:</strong>
+  <%= @name.age %>
+</p>
+
 <%= link_to 'Edit', edit_name_path(@name) %> |
 <%= link_to 'Back', names_path %>
